--- a/style.css
+++ b/style.css
@@ -48,6 +48,9 @@ h1{
    color: #03211f;
    border:solid 1px #ddd;
  }
+ #photoGrid div:hover {
+   opacity: 0.7;
+ }
  #photoGrid img {
    display:flex;
    align-items: center;
