--- a/style.css
+++ b/style.css
@@ -11,6 +11,15 @@ h1{
   font-family: 'Arima Madurai', cursive;
   font-size:4rem;
 }
+h2{
+  color: #03211f;
+  font-size:1.5rem;
+}
+hr{
+  height: 5px;
+  border:none;
+  background-color: #725a41;
+}
 .cover{
   display: flex;
   justify-content: center;
@@ -28,9 +37,6 @@ h1{
   white-space: nowrap;
   font-family: 'Arima Madurai', cursive;
   font-size: 1rem;
-}
-.contentName:hover{
-  color: white;
 }
 .contentPrice{
   color:#701313;
@@ -51,17 +57,17 @@ h1{
    color: #03211f;
    border:solid 1px #ddd;
  }
-.grid img:hover {
-   opacity: 0.7;
- }
 .grid img {
    margin-top: 0.55vmin;
    padding:0.5vmin;
    border:none;
    width:18vw;
    height:30vh;
+   transition: transform .2s;
  }
-
+.grid img:hover{
+  transform: scale(1.25);
+}
  button{
    font-size: 1rem;
    background-color: #355434;
