--- a/style.css
+++ b/style.css
@@ -1,6 +1,5 @@
 body {
   margin: 2.5vw 5vw 0px 5vw;
-  padding: 0px;
   font-family: 'Source Sans Pro', sans-serif;
   color: #725a41;
 }
@@ -10,6 +9,7 @@ h1{
   align-items: center;
   font-family: 'Arima Madurai', cursive;
   font-size:5vw;
+  margin:0;
 }
 h2{
   color: #03211f;
@@ -24,11 +24,10 @@ hr{
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 80vh;
 }
 .cover img{
-  width:75vw;
-  height:80vh;
+  width:65vw;
+  height:75vh;
 }
 .contentItem{
   display: flex;
@@ -78,7 +77,7 @@ hr{
    background-color: #355434;
    color:white;
    border: none;
-   transition-duration: 0.4s;
+   transition-duration: 0.3s;
    cursor: pointer;
  }
  button:hover{
